--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.3.2",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "path": "^0.12.7",
     "postcss-px-to-viewport": "^1.1.1",
     "vant": "^2.2.13",
     "vue": "^2.6.10",
